I tried to make the small white rounded comment boxes in the newchunks/show view scroll, so that the red Courier New text would not overflow them if long, but what I did in the dev tools (overflow:scroll;) within the box didn't work when I put it into the code- will have to debug. I did however widen the title area for the edit newchunk view, so the title could be longer is desired and still seen on the edit page.

--- a/app/views/newchunks/show_newchunk.erb
+++ b/app/views/newchunks/show_newchunk.erb
@@ -232,7 +232,8 @@ body{
     margin-bottom: 5px;
     position: relative;
     padding: 10px;
-    /* top: 245px; */
+    overflow: initial;
+    overflow: scroll;
     font-family: "Courier New";
     font-style: italic;
    } 
@@ -307,13 +308,7 @@ body{
 
    }
 
-   /*#delete-button {
-    position: fixed;
-    left: 1024px;
-    font-size: 22px;
-    top: 411px;
-    
-   }*/
+
 
    #plus-show {
         position: absolute;
@@ -335,17 +330,7 @@ body{
     padding-top: 0px;
     height: 287px;}
 
-/*#trash-can {
-    position: fixed;
-    left: 999px;
-    top: 456px;
-    width: 278px;
-    height: 26px;
-    transform: scale(1);
-    transform-origin: 137px 94px;
-    color: red;
-    z-index:14;
-}*/
+
 
 #comment-wrapper {
 
