I fixed the title scroll box on the projects index view page at /projects- it was not scrolling because I forgot to set a max-width. I also changed the height of the box and made the font smaller for each title, so the page would look a bit cleaner

--- a/app/views/projects/projects_index.erb
+++ b/app/views/projects/projects_index.erb
@@ -50,7 +50,9 @@ font-family: 'Audiowide', cursive;
 
   .projects a {
     text-decoration: none;
-    color:#2fa2bd;
+    color: #2fa2bd;
+    font-size: 17px;
+    letter-spacing: 6px;
   }
 
   .projects {
@@ -66,9 +68,12 @@ font-family: 'Audiowide', cursive;
   }
 
   #projects-container {
-    top: 390px;
+    top: 357px;
     left: 145px;
-    position:fixed;
+    position: fixed;
+    overflow: scroll;
+    max-height: 230px;
+    width: 800px;
   }
   
   #create-project {
