changed the max-height of the title bar for newchunks/newchunks (yellow page) view, and also for the create newchunks page, as longer titles were overflowing.I set the overflow to scroll (boooring) and gave a max height to keep the pages uncluttered with large title overflow.

--- a/app/views/newchunks/create_newchunk.erb
+++ b/app/views/newchunks/create_newchunk.erb
@@ -39,7 +39,10 @@ body{
     font-size: 122px;
     letter-spacing: 0px;
     font-style: italic;
-    color: red;}
+    color: red;
+    max-height: 153px;
+    overflow: scroll;
+  }
 
 #name-create {
     position: fixed;
