--- a/app/views/newchunks/newchunks.erb
+++ b/app/views/newchunks/newchunks.erb
@@ -25,6 +25,8 @@ font-family: 'Audiowide', cursive;
     letter-spacing: 0px;
     font-style: italic;
     color: red;
+    overflow: scroll;
+    max-height: 92px;
   }
 
 
