--- a/app/views/newchunks/show_newchunk.erb
+++ b/app/views/newchunks/show_newchunk.erb
@@ -361,7 +361,7 @@ body{
 <div id="name"><%= @newchunk_author.username %></div>
 
  <!-- OLDCHUNK TITLE -->
-  <div id="o-title"><a href="/juliet-is-the-sun/<%= @oldchunk.oslug %>/index"><%= @oldchunk.title %></a></div> 
+  <div id="o-title"><a href="/<%=@project.pslug%>/<%= @oldchunk.oslug %>/index"><%= @oldchunk.title %></a></div> 
  
 
 <!--OLDCHUNK TEXT
