similarly changed the allowable width and overflow properties for both the project title and the ttitle of the newchunk on the newchunk/show page, due to the same types of overflow probs I encountered on the other newchunks pages.

--- a/app/views/newchunks/show_newchunk.erb
+++ b/app/views/newchunks/show_newchunk.erb
@@ -37,12 +37,14 @@ body{
     /* float: left; */
     left: 89px;
     width: 1271px;
-    height: 121px;
+    
     background-color: rgba(255, 255, 255, 0);
     font-size: 122px;
     letter-spacing: 0px;
     font-style: italic;
-    color: red;}
+    color: red;
+    max-height: 151px;
+    overflow: scroll;}
 
 #name {
         position: fixed;
@@ -162,16 +164,15 @@ body{
     font-size: 20px;
     letter-spacing: 1px;
     top: 104px;
-    left: 528px;
+    left: 552px;
     height: 22%;
-    /* transform: rotate(-90deg); */
     z-index: 4;
     font-style: italic;
     color: #ff5d55;
     position: fixed;
-    /* max-height: 1119px; */
-    /* max-width: 1100px; */
-    overflow: scroll;}
+    max-height: 25px;
+    max-width: 340px;
+    overflow: scroll; }
 
    #side-edit{
     font-size: 45px;
